[project]
name = "fly-in"
version = "0.1.0"
description = ""
authors = [
    {name = "alebaron",email = "alizea.lebaron2@gmail.com"}
]
license = {text = "CC0 1.0 Universal"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
